[package]
name = "vector_search"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
serde = "1.0.204"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.69"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
